@@ -1,3 +1,10 @@
+BSE 0.22 - unreleased
+========
+
+ - automatic image insertion can now be disabled globally or on a
+   per-article basis.
+   https://rt4.develop-help.com/Ticket/Display.html?id=1331
+
 BSE 0.21 - 07 Mar 2012
 ========
 
